syntax = "proto3";

package inference;

service InferenceService {
  rpc Predict (PredictRequest) returns (PredictResponse) {}
}

message PredictRequest {
  bytes image_data = 1;
}

message Detection {
  string label = 1;
  float confidence = 2;
  repeated float bbox = 3;
}

message PredictResponse {
  repeated Detection detections = 1;
}